--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "nodemon backend/index.js",
     "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend",
-    "start":"nodemon backend/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"nodemon backend/index.js"
   },
   "author": "",
   "license": "ISC",
